Fix the misunderstanding instruction and switch to use hf_hub to download model and obj and csv.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ log.txt
 .python-version
 01.Data-generation/03-SimulationInstanceManager/download.tar.gz
 01.Data-generation/03-SimulationInstanceManager/config.yaml
+venv/
